--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weather",
+  "name": "weather-js",
   "version": "1.0.0",
-  "description": "Weather application",
+  "description": "provides local weather forecast updates",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/tarwat-uddin/weather-js#readme",
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.5.0",
     "@parcel/resolver-glob": "^2.0.1",
+    "@parcel/transformer-webmanifest": "^2.5.0",
     "parcel": "^2.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "core-js": "^3.20.2",
     "regenerator-runtime": "^0.13.9"
   }
