--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
-    "core-js": "^3.20.2",
-    "regenerator-runtime": "^0.13.9"
+    "axios": "^0.27.2"
   }
 }
